@@ -44,12 +44,12 @@ function cf7bs_acceptance_shortcode_handler( $tag ) {
 			'1'					=> $tag->content,
 		),
 		'help_text'			=> $validation_error,
-		'size'				=> cf7bs_get_form_property( 'size' ),
-		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns' ),
-		'form_layout'		=> cf7bs_get_form_property( 'layout' ),
-		'form_label_width'	=> cf7bs_get_form_property( 'label_width' ),
-		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint' ),
-		'group_layout'		=> cf7bs_get_form_property( 'group_layout' ),
+		'size'				=> cf7bs_get_form_property( 'size', 0, $tag ),
+		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns', 0, $tag ),
+		'form_layout'		=> cf7bs_get_form_property( 'layout', 0, $tag ),
+		'form_label_width'	=> cf7bs_get_form_property( 'label_width', 0, $tag ),
+		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint', 0, $tag ),
+		'group_layout'		=> cf7bs_get_form_property( 'group_layout', 0, $tag ),
 		'mode'				=> $mode,
 		'status'			=> $status,
 		'tabindex'			=> $tag->get_option( 'tabindex', 'int', true ),
