@@ -25,10 +25,10 @@ function cf7bs_count_shortcode_handler( $tag ) {
 		'name'				=> wpcf7_count_shortcode_handler( $tag ),
 		'type'				=> 'custom',
 		'label'				=> $tag_obj->content,
-		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns' ),
-		'form_layout'		=> cf7bs_get_form_property( 'layout' ),
-		'form_label_width'	=> cf7bs_get_form_property( 'label_width' ),
-		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint' ),
+		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns', 0, $tag_obj ),
+		'form_layout'		=> cf7bs_get_form_property( 'layout', 0, $tag_obj ),
+		'form_label_width'	=> cf7bs_get_form_property( 'label_width', 0, $tag_obj ),
+		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint', 0, $tag_obj ),
 		'tabindex'			=> false,
 		'wrapper_class'		=> '',
 	), $tag_obj->basetype, $tag_obj->name ) );
