@@ -24,9 +24,9 @@ function cf7bs_submit_shortcode_handler( $tag ) {
 		$value = __( 'Send', 'contact-form-7' );
 	}
 
-	$size = cf7bs_get_form_property( 'submit_size' );
+	$size = cf7bs_get_form_property( 'submit_size', 0, $tag );
 	if ( ! $size ) {
-		$size = cf7bs_get_form_property( 'size' );
+		$size = cf7bs_get_form_property( 'size', 0, $tag );
 	}
 
 	$button = new CF7BS_Button( array(
@@ -34,14 +34,14 @@ function cf7bs_submit_shortcode_handler( $tag ) {
 		'id'				=> $tag->get_option( 'id', 'id', true ),
 		'class'				=> $tag->get_class_option( $class ),
 		'title'				=> $value,
-		'type'				=> cf7bs_get_form_property( 'submit_type' ),
+		'type'				=> cf7bs_get_form_property( 'submit_type', 0, $tag ),
 		'size'				=> $size,
 		'tabindex'			=> $tag->get_option( 'tabindex', 'int', true ),
 		'align'				=> $tag->get_option( 'align', '[A-Za-z]+', true ),
-		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns' ),
-		'form_layout'		=> cf7bs_get_form_property( 'layout' ),
-		'form_label_width'	=> cf7bs_get_form_property( 'label_width' ),
-		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint' ),
+		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns', 0, $tag ),
+		'form_layout'		=> cf7bs_get_form_property( 'layout', 0, $tag ),
+		'form_label_width'	=> cf7bs_get_form_property( 'label_width', 0, $tag ),
+		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint', 0, $tag ),
 	) );
 
 	$html = $button->display( false );
