@@ -137,11 +137,11 @@ function cf7bs_text_shortcode_handler( $tag ) {
 		'placeholder'		=> $placeholder,
 		'label'				=> $content,
 		'help_text'			=> $validation_error,
-		'size'				=> cf7bs_get_form_property( 'size' ),
-		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns' ),
-		'form_layout'		=> cf7bs_get_form_property( 'layout' ),
-		'form_label_width'	=> cf7bs_get_form_property( 'label_width' ),
-		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint' ),
+		'size'				=> cf7bs_get_form_property( 'size', 0, $tag_obj ),
+		'grid_columns'		=> cf7bs_get_form_property( 'grid_columns', 0, $tag_obj ),
+		'form_layout'		=> cf7bs_get_form_property( 'layout', 0, $tag_obj ),
+		'form_label_width'	=> cf7bs_get_form_property( 'label_width', 0, $tag_obj ),
+		'form_breakpoint'	=> cf7bs_get_form_property( 'breakpoint', 0, $tag_obj ),
 		'mode'				=> $mode,
 		'status'			=> $status,
 		'readonly'			=> $tag_obj->has_option( 'readonly' ) ? true : false,
